--- a/frontend/src/app/features/admin-dashboard/admin-dashboard.component.css
+++ b/frontend/src/app/features/admin-dashboard/admin-dashboard.component.css
@@ -1,26 +1,30 @@
-
-.admin-home
-{
+.admin-home {
   display: flex;
-
-}
-.top-header{
-  height: 10vh;
-  display: flex;
-}
-.main-wrapper{
-  margin: 0 auto;
-  width: 75vw;
+  height: 100vh;
 }
 
-.body-content
-{
+.main-wrapper {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 0 auto;
+  overflow: hidden;
 }
 
+/* .top-header {
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fff;
+  height: 60px;
+} */
 
-
+.body-content {
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  /* justify-content: flex-start; */
+  padding: 20px;
+  padding-top: 70px;
+  overflow-y: auto;
+  height: calc(100vh - 60px);
+}
