--- a/frontend/src/app/features/admin-dashboard/category-management/category-management.component.html
+++ b/frontend/src/app/features/admin-dashboard/category-management/category-management.component.html
@@ -1,4 +1,3 @@
-
 <i class="fa fa-plus-square addBtn" aria-hidden="true" (click)="showAddModal = true"></i>
 <!-- Category Table -->
 
@@ -12,11 +11,10 @@
       </tr>
     </thead>
     <tbody *ngIf="paginatedCategories.length > 0">
-      <tr *ngFor="let category of paginatedCategories; let i = index">
+      <tr *ngFor="let category of paginatedCategories; let i = index" (mouseover)="hoveredIndex = i" (mouseleave)="hoveredIndex = null" [class.hovered]="hoveredIndex === i">
         <td><img [src]="category.image_url" alt="{{ category.name }}" class="category-image"></td>
         <td>{{ category.name }}</td>
         <td class="actions">
-
           <i class="fa fa-pencil-square-o edit" aria-hidden="true" (click)="openUpdateModal(category)"></i>
           <i class="fa fa-trash-o delete" aria-hidden="true" (click)="openDeleteModal(category.id)"></i>
         </td>
@@ -28,7 +26,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="pagination" *ngIf="categories.length!<10">
+  <div class="pagination" *ngIf="categories.length > 10">
     <button (click)="previousPage()" [disabled]="currentPage === 1">Previous</button>
     <span>Page {{ currentPage }} of {{ totalPages }}</span>
     <button (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
@@ -53,7 +51,7 @@
 <div class="modal" *ngIf="showUpdateModal">
   <div class="modal-content">
     <span class="close" (click)="closeUpdateModal()">&times;</span>
-    <form [formGroup]="createCategoryForm" (ngSubmit)="updateCategory(category_id,createCategoryForm.value)">
+    <form [formGroup]="createCategoryForm" (ngSubmit)="updateCategory(category_id)">
       <label for="name">Name:</label>
       <input id="name" formControlName="name">
       <label for="image_url">Image URL:</label>
