--- a/frontend/src/app/features/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/features/user-dashboard/user-dashboard.component.css
@@ -1,109 +1,45 @@
 .user-layout {
   display: flex;
+  height: 100vh;
 }
 
 .main-content {
-  margin-left: 250px;
-  width: calc(100% - 250px);
-  transition: margin-left 0.3s, width 0.3s;
+  flex-grow: 1;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  transition: margin-left 0.3s ease;
+  overflow: hidden;
 }
 
-.main-content.collapsed {
-  margin-left: 50px;
-  width: calc(100% - 50px);
+.app-user-top-bar {
+  flex-shrink: 0;
 }
 
 .content {
-  margin-top: 50px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
   padding: 20px;
+  padding-top: 70px;
+  overflow-y: auto;
+  background-color: #f0f0f0;
+  height: calc(100vh - 60px);
 }
-/* img{
-    width: 15px;
+
+.app-user-top-bar, .app-user-sidebar {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
-.entirePage{
-   width: 100%;
-   height: 100%;
-   display: flex;
+
+.app-user-sidebar {
+  height: 100vh;
 }
-.sideBar{
-   width: 18%;
-   height: 100%;
-   justify-content: center;
-   align-items: center;
-   margin-right: 2%;
+
+.app-user-top-bar {
+  width: 100%;
+  top: 0;
+  z-index: 1000;
 }
-.sideBar div{
-    margin-left: 3%;
-}
-.navigation div{
-    display: flex;
-    align-items: center;
-    height: 5vh;
-    width: auto;
-    gap: 2%;
-    margin-bottom: 3px;
-}
-.navigation div:hover{
-    background-color: #39234975;
-}
-.navigation div p{
-    color: white;
-}
-.otherPage{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 80%;
-}
-.navBar{
-    display: flex;
-    gap: 6%;
-    height: 6%;
-    align-items: center;
-    width: 100%;
-    justify-content: space-between;
-}
-.search-bar{
-    display: flex;
-    width: 50%;
-    height: 80%;
-    position: relative;
-    border-radius: 10px;
-    margin-left: 5%;
-}
-.search-bar input{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    border: none;
-    border-bottom: 1px solid #6a0dadc2;
-}
-.search-bar button{
-    position: absolute;
-    right:0;
-    height: 100%;
-    width: 10%;
-    background-color:#6a0dad;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border: none;
-}
-.search-bar button img{
-    width: 40%;
-}
-.user-actions{
-    display: flex;
-    justify-content: flex-end;
-    width: 35%;margin-right: 2%;
-    height: 80%;
-    align-items: center;
-    column-gap: 10%;
-}
-.user-actions img{
-    width: 8%;
-}
-.user-actions a{
-    text-decoration: none ;
-} */
