--- a/frontend/src/app/features/user-dashboard/user-top-bar/user-top-bar.component.html
+++ b/frontend/src/app/features/user-dashboard/user-top-bar/user-top-bar.component.html
@@ -1,14 +1,14 @@
 <div class="topbar">
   <div class="navBar">
     <div class="search-bar">
-        <input type="text" placeholder="search" [(ngModel)]="searchTerm" (input)="searchProducts()">
-        <button (click)="searchProducts()"><img src="../../../icons/search_24dp_FILL0_wght400_GRAD0_opsz24.png" alt=""></button>
+      <input type="text" placeholder="search" [(ngModel)]="searchTerm" (input)="searchProducts()">
+      <button (click)="searchProducts()"><img src="../../../icons/search_24dp_FILL0_wght400_GRAD0_opsz24.png" alt="Search"></button>
     </div>
     <div class="user-actions">
-        <a href="">Home</a>
-        <img src="../../../icons/notification.png" alt="">
-        <img src="../../../icons/cart.png" alt="">
-        <img src="../../../icons/profile.png" alt="">
+      <a href="/user/dashboard">Home</a>
+      <img src="/icons/notification.png" alt="Notifications">
+      <img src="/icons/cart.png" alt="Cart">
+      <img src="/icons/profile.png" alt="Profile">
     </div>
-</div>
+  </div>
 </div>
